fix modal z-index

--- a/styles/global/global.styl
+++ b/styles/global/global.styl
@@ -61,7 +61,8 @@
   //--z-index-header: 20
   //--z-index-overlay: 15
   //--z-index-navbar: 10
-  //--z-index-modal: 999
+  --z-index-modal: 25
+  --z-index-menu: 20
 
   +below(1200px) {
     --aside-width: 220px
